Added information on Operators column

--- a/index.html
+++ b/index.html
@@ -55,55 +55,10 @@
 
     <div class="column middle">
       <a href="Operators.html"><h2>Operators</h2></a>
-      <p>jjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
+      <!-- Add clickable images of faction icons that take user to desired faction page with list of characters -->
+      <p>Sample Text</p>
     </div>
 
-
-
-       <!-- Just in case I need it later.
-       <ul>
-        <li>Ash</li>
-        <li>Bandit</li>
-        <li>Blackbeard</li>
-        <li>Blitz</li>
-        <li>Buck</li>
-        <li>Capitao</li>
-        <li>Castle</li>
-        <li>Caveira</li>
-        <li>Doc</li>
-        <li>Dokkaebi</li>
-        <li>Echo</li>
-        <li>Ela</li>
-        <li>Finka</li>
-        <li>Frost</li>
-        <li>Fuze</li>
-        <li>Glaz</li>
-        <li>Hibana</li>
-        <li>IQ</li>
-        <li>Jackal</li>
-        <li>Jager</li>
-        <li>Kapkan</li>
-        <li>Lesion</li>
-        <li>Lion</li>
-        <li>Mira</li>
-        <li>Montagne</li>
-        <li>Mute</li>
-        <li>Pulse</li>
-        <li>Rook</li>
-        <li>Sleadge</li>
-        <li>Smoke</li>
-        <li>Tachanka</li>
-        <li>Thatcher</li>
-        <li>Thermite</li>
-        <li>Twitch</li>
-        <li>Valkyrie</li>
-        <li>Vigil</li>
-        <li>Ying</li>
-        <li>Zofia</li>
-
-
-       </ul>
-        -->
 
         <div class="column side right">
           <h2>Patches</h2>
