Changing layout of website

--- a/index.html
+++ b/index.html
@@ -45,22 +45,16 @@
 
 
     <div class="row">
-      <div class="column side">
-    <h2>Playerbase</h2>
-      <p>When Rainbow Six Siege first came out December 1st, 2015 its playerbase was just a little over 20,000 players per day. Within the next couple of months the number of players dropped to an all-time low of just 11,000 gamers daily. The game was considered a massive flop and dissapointment to Ubisoft, knowing this they never gave up pushing out bug fixes, patches and updates on the progress they were making on the game via their website and social media to the players supporting their project. The game finally picked up some steam thanks to the release of the first season of the game which included new maps and operators, the count jumped nearly triple the amount of daily players at 30,000 consistant players.</p>
-
-      <p>With a lot of love, updates and many bug fixes the developers finally managed to create a stable game to build onto and grow the playerbase. As Ubisoft continued to push out new seasons and patches, the fandom of the game grew exponentialy. 11 seasons later with many ups and downs Rainbow Six has become one of the most successful comebacks in gaming. To this day Rainbow Six Siege's average player count is at 2 million and ever growing thanks to the continued support of the players and hard work of the devs at Ubisoft that keep the game running. </p>
-    </div>
 
 
-    <div class="column middle">
+    <div class="operator_column">
       <a href="Operators.html"><h2>Operators</h2></a>
       <!-- Add clickable images of faction icons that take user to desired faction page with list of characters -->
       <p>Sample Text</p>
     </div>
 
 
-        <div class="column side right">
+        <div class="patches_column">
           <h2>Patches</h2>
           <p>this is where I will add a ink to all of UbiSoft patch notes in order from oldest to most recent.</p>
         </div>
