Updated layouts of each page and corrected columns and text issues

--- a/Operators.html
+++ b/Operators.html
@@ -1,26 +1,50 @@
-<!DOCTYPE html>
-<html>
-<head>
+<style>
+   body {
+       background-image: url("images/OpChimera.jpeg");
+       background-repeat: no-repeat;
+       object-position: 75% 0%;
+       background-position: 75% 0%;
+       background-size: cover;
+       margin: 0;
 
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-  </head>
+
+   }
+
+   </style>
+
+<title>Rainbow Six Siege Database</title>
+
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+</head>
+
 <body>
 
 
-      <ul class="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="Operators.html">Operators</a></li>
-    <li><a href="Patches.html">Patches</a></li>
-    <li><a href="about.asp">About</a></li>
-  </ul>
+<div class="page_banner">
+ <a href="index.html">
 
-
-  <a href="index.html">
-  <img src="images/R6logo.jpeg" style="width:40px; height:40px;">
+<img src="images/R6logo.jpeg" style="width:40px; height:40px;">
 </a>
 
-  <h1>This is sample text.</h1>
+ <ul class="nav">
+<li><a href="index.html">Home</a></li>
+<li><a href="Operators.html">Operators</a></li>
+<li><a href="Patches.html">Patches</a></li>
+<li><a href="about.asp">About</a></li>
+</ul>
 
-  </body>
+
+
+ <h1 class="toptext">Rainbow Six Siege Database</h1>
+</div>
+
+<div class="main_operator_content">
+  <h1>Rainbow Operators</h1>
+
+</div>
+
+
+ </body>
 </html>
