--- a/Patches.html
+++ b/Patches.html
@@ -1,26 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
+<style>
+   body {
+       background-image: url("images/OpChimera.jpeg");
+       background-repeat: no-repeat;
+       object-position: 75% 0%;
+       background-position: 75% 0%;
+       background-size: cover;
+       margin: 0;
 
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-  </head>
+
+   }
+
+   </style>
+
+<title>Rainbow Six Siege Database</title>
+
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+</head>
+
 <body>
 
 
-      <ul class="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="Operators.html">Operators</a></li>
-    <li><a href="Patchs.html">Patches</a></li>
-    <li><a href="about.asp">About</a></li>
-  </ul>
+<div class="page_banner">
+ <a href="index.html">
 
-
-  <a href="index.html">
-  <img src="images/R6logo.jpeg" style="width:40px; height:40px;">
+<img src="images/R6logo.jpeg" style="width:40px; height:40px;">
 </a>
 
-  <h1>This is sample text.</h1>
+ <ul class="nav">
+<li><a href="index.html">Home</a></li>
+<li><a href="Operators.html">Operators</a></li>
+<li><a href="Patches.html">Patches</a></li>
+<li><a href="about.asp">About</a></li>
+</ul>
 
-  </body>
+
+
+ <h1 class="toptext">Rainbow Six Siege Database</h1>
+</div>
+
+<div class="main_patches_content">
+  <h1>Patch Notes</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>
+</div>
+
+
+
+
+
+ </body>
 </html>
