--- a/index.html
+++ b/index.html
@@ -2,21 +2,6 @@
 <html>
  <head>
 
-   <style>
-      body {
-          background-image: url("images/OpChimera.jpeg");
-          background-repeat: no-repeat;
-          object-position: 75% 0%;
-          background-position: 75% 0%;
-          background-size: cover;
-          margin: 0;
-
-
-
-      }
-
-      </style>
-
   <title>Rainbow Six Siege Database</title>
 
    <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -25,50 +10,50 @@
 
   <body>
 
+    <div class="page_top clearfix">
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/R6logo.jpeg" style="width:40px; height:40px;">
+      </a>
+    </div>
+        <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Operators.html">Operators</a></li>
+      <li><a href="Patches.html">Patches</a></li>
+    </ul>
+  </div>
 
-<div class="page_banner">
-    <a href="index.html">
-
-  <img src="images/R6logo.jpeg" style="width:40px; height:40px;">
-</a>
-
-    <ul class="nav">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="Operators.html">Operators</a></li>
-  <li><a href="Patches.html">Patches</a></li>
-  <li><a href="about.asp">About</a></li>
-</ul>
+  <div class="page_banner">
 
 
+    <h1 class="toptext">Rainbow Six Siege Database</h1
 
-    <h1 class="toptext">Rainbow Six Siege Database</h1>
   </div>
 
 
 
 
-    <div class="row">
 
-      <div class="wrapper">
-    <div class="operator_column">
+      <div class="wrapper" "clearfix">
+    <div class="operator_column" "clearfix">
       <a href="Operators.html"><h2>Operators</h2></a>
       <!-- Add clickable images of faction icons that take user to desired faction page with list of characters -->
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
     </div>
 
 
         <div class="patches_column">
-          <h2>Patches</h2>
+          <a href="Patches.html"><h2>Patches</h2></a>
           <!--This is where I will add a ink to all of UbiSoft patch notes in order from oldest to most recent.-->
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
       </div>
-    </div>
 
 
-      <h2 class="player_count">Live Player Count</h2>
+    <div class="player_count" "clearfix">
+      <h2>Live Player Count</h2>
       <p>Add a player count graph that pulls information from Steam</p>
-
+    </div>
     </body>
 </html>
