Added Jquery and changed layout issues

--- a/Operators.html
+++ b/Operators.html
@@ -20,12 +20,11 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="Operators.html">Operators</a></li>
       <li><a href="Patches.html">Patches</a></li>
+      <li><a href="surprise.html">?</a></li>
     </ul>
   </div>
 
 <div class="page_banner">
-
-
 
 
     <h1 class="toptext">Rainbow Six Siege Database</h1>
