--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="Operators.html">Operators</a></li>
       <li><a href="Patches.html">Patches</a></li>
+      <li><a href="surprise.html">?</a></li>
     </ul>
   </div>
 
   <div class="page_banner">
+      <img src="images/rainbowoperators.jpg" style="width: 100%;">
 
-
-    <h1 class="toptext">Rainbow Six Siege Database</h1
+    <h1 class="toptext">Rainbow Six Siege Database</h1>
 
   </div>
 
@@ -56,4 +57,7 @@
       <p>Add a player count graph that pulls information from Steam</p>
     </div>
     </body>
+
+    <footer>
+    </footer>
 </html>
