--- a/surprise.html
+++ b/surprise.html
@@ -29,14 +29,17 @@
 
 
 
-    <h1 class="toptext">Rainbow Six Siege Database</h1>
+    <h1 class="toptext">???</h1>
   </div>
 
-  <div class="Patches_content">
-    <h1>Patches Information</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-
+<div>
+      <p class="Tachanka">
+  		<span><img src="images/LordChanka.jpg">Behold the Lord</span>
+  		<button>?</button>
+  	</p>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/app.js"></script>
+</div>
 
 
 
